--- a/tile-element.html
+++ b/tile-element.html
@@ -334,9 +334,8 @@ pointer-events: none;
             // do a sufficiently-deep clone of the group model
             // TODO: this could perhaps be turned into a fucntion in cut-object
             // rather than doing it here
-            let cm = Utils.canvas_manager;
             let group = {
-                waves: cm.clone_ckey(this.group_model.waves), 
+                waves: {canvas: Utils.clone_canvas(this.group_model.waves.canvas)}, 
                 tac: this.group_model.tac,
                 rm: {
                   spa: this.group_model.rm.spa,
