--- a/index_full.html
+++ b/index_full.html
@@ -8,7 +8,7 @@
 
 <script> 
 console.log("")
-console.log("%cWaveform v1.0 by DM", "color: blue; font-size: large; background: #ccc; border: 1px solid blue;padding: 4px 10px;");
+console.log("%cWaveform v0.9.9 by DM", "color: blue; font-size: large; background: #ccc; border: 1px solid blue;padding: 4px 10px;");
 console.log("")
 document.addEventListener('keydown', function(e){
     if(wav.disable_shortcuts){
@@ -79,6 +79,9 @@ margin-bottom: 2px;
 
 }
 
+a {
+color: inherit;
+}
 p, ul, ol{
 margin-top: 6px;
 margin-bottom: 6px;
@@ -573,9 +576,15 @@ background-color: rgba(0,0,0,0.2);
             <a href="https://www.youtube.com/watch?v=36o69CPu-1E" target="_blank">
                 <img class="youtube_demo_img" src="img/demo_youtube.png" width="560" height="315"/>
             </a>
+            <br><br>
+            <span style="color:red; font-weight: bold;">
+                This version is very new and exciting, but it's missing <a href="https://github.com/d1manson/waveform/issues/24" target="_blank">one or two features</a> and may have some bugs.<br>
+                If neccessary, you can find the old version live <a href="https://annie2013.github.io/waveform" target="_blank">here</a>.<br>
+                If you discover bugs of any kind please report them asap.  Happy experimenting!
+            </span>
         </div>
         <div class='initial_extra_bottom_right'>
-            Waveform v1.0, by DM<br> Tested with Chrome 49 <img src="img/chromelogo.png" width="15px" style="float:right;margin-left:2px;"/>
+            Waveform v0.9.9, by DM<br> Tested with Chrome 49 <img src="img/chromelogo.png" width="15px" style="float:right;margin-left:2px;"/>
         </div>
     </drop-zone>
 
